fix vertical spacing on narrow devices

--- a/mod2soln/css/responsive.css
+++ b/mod2soln/css/responsive.css
@@ -2,8 +2,11 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
-/*  font-family: Helvetica;*/
   font-family: Verdana, Geneva, sans-serif;
+}
+
+div {
+  float: left;
 }
 
 body {
